[gd_scene load_steps=9 format=3 uid="uid://d1cvpkf5rhomg"]

[ext_resource type="Script" path="res://scenes/actor/actor.gd" id="1_uderr"]
[ext_resource type="Texture2D" uid="uid://c7wc44lmsxl26" path="res://assets/top_down_shooter/PNG/Soldier 1/soldier1_hold.png" id="2_c74jg"]
[ext_resource type="PackedScene" uid="uid://cohfrt8h7aasg" path="res://scenes/actor/component/health.tscn" id="4_hikhf"]
[ext_resource type="PackedScene" uid="uid://csey2ttus5i7" path="res://scenes/weapon/pistol.tscn" id="5_175d1"]
[ext_resource type="Script" path="res://scenes/actor/weapon_manager.gd" id="5_fma8g"]
[ext_resource type="PackedScene" uid="uid://iesf8n20ul1b" path="res://scenes/actor/component/team.tscn" id="6_huy6s"]
[ext_resource type="PackedScene" uid="uid://c3f6foiqy7yel" path="res://scenes/weapon/sub_machine_gun.tscn" id="7_pcoye"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mndd7"]
radius = 13.0
height = 42.0

[node name="Actor" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_uderr")

[node name="BodyImg" type="Sprite2D" parent="."]
texture = ExtResource("2_c74jg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_mndd7")

[node name="Health" parent="." instance=ExtResource("4_hikhf")]

[node name="Team" parent="." instance=ExtResource("6_huy6s")]

[node name="ActorUiRmtTxfm2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="WeaponManager" type="Node2D" parent="."]
position = Vector2(14, 13)
script = ExtResource("5_fma8g")

[node name="SubMachineGun" parent="WeaponManager" instance=ExtResource("7_pcoye")]

[node name="Pistol" parent="WeaponManager" instance=ExtResource("5_175d1")]
visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
